[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-library-python"
version = "0.1.0"
description = "A modular robot control library"
authors = [{name = "Example Author", email = "author@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
